--- a/dialogL/src/main/res/layout/dialog.xml
+++ b/dialogL/src/main/res/layout/dialog.xml
@@ -1,27 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/background"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/background"
     android:background="@android:color/white"
-    android:orientation="vertical"
-   >
+    android:orientation="vertical">
+
     <ImageView
+        android:id="@+id/image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/image"
-        android:layout_alignParentLeft="true"
-       />
+        android:layout_alignParentLeft="true" />
 
     <LinearLayout
-        android:layout_toRightOf="@+id/image"
         android:id="@+id/titles"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_toRightOf="@+id/image"
         android:orientation="vertical"
-        android:padding="24dp"
-        >
+        android:padding="24dp">
 
         <TextView
             android:id="@android:id/text1"
@@ -43,12 +41,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/titles"
+        android:gravity="end|bottom"
         android:orientation="horizontal"
         android:paddingBottom="16dp"
         android:paddingLeft="16dp"
-        android:gravity="end|bottom"
-        android:layout_below="@+id/titles"
         android:paddingRight="16dp">
+
         <rosenpin.androidL.dialog.SmartButton
             android:id="@android:id/button2"
             style="?android:attr/borderlessButtonStyle"
